@@ -9,7 +9,6 @@ import static io.airbyte.integrations.source.mssql.MsSqlSpecConstants.FAIL_SYNC_
 import static io.airbyte.integrations.source.mssql.MsSqlSpecConstants.INVALID_CDC_CURSOR_POSITION_PROPERTY;
 import static io.airbyte.integrations.source.mssql.MssqlCdcHelper.getDebeziumProperties;
 import static io.airbyte.integrations.source.mssql.MssqlQueryUtils.getTableSizeInfoForStreams;
-import static io.airbyte.integrations.source.mssql.MssqlQueryUtils.prettyPrintConfiguredAirbyteStreamList;
 import static io.airbyte.integrations.source.mssql.cdc.MssqlCdcStateConstants.MSSQL_CDC_OFFSET;
 import static io.airbyte.integrations.source.mssql.initialsync.MssqlInitialLoadHandler.discoverClusteredIndexForStream;
 import static io.airbyte.integrations.source.mssql.initialsync.MssqlInitialLoadStateManager.ORDERED_COL_STATE_TYPE;
@@ -35,23 +34,11 @@ import io.airbyte.commons.exceptions.ConfigErrorException;
 import io.airbyte.commons.json.Jsons;
 import io.airbyte.commons.util.AutoCloseableIterator;
 import io.airbyte.commons.util.AutoCloseableIterators;
-import io.airbyte.integrations.source.mssql.MssqlCdcConnectorMetadataInjector;
-import io.airbyte.integrations.source.mssql.MssqlCdcSavedInfoFetcher;
-import io.airbyte.integrations.source.mssql.MssqlCdcStateHandler;
-import io.airbyte.integrations.source.mssql.MssqlCdcTargetPosition;
-import io.airbyte.integrations.source.mssql.MssqlQueryUtils;
-import io.airbyte.integrations.source.mssql.MssqlSourceOperations;
+import io.airbyte.integrations.source.mssql.*;
 import io.airbyte.integrations.source.mssql.cdc.MssqlDebeziumStateUtil;
 import io.airbyte.integrations.source.mssql.cdc.MssqlDebeziumStateUtil.MssqlDebeziumStateAttributes;
 import io.airbyte.protocol.models.CommonField;
-import io.airbyte.protocol.models.v0.AirbyteMessage;
-import io.airbyte.protocol.models.v0.AirbyteStateMessage;
-import io.airbyte.protocol.models.v0.AirbyteStreamNameNamespacePair;
-import io.airbyte.protocol.models.v0.AirbyteStreamState;
-import io.airbyte.protocol.models.v0.ConfiguredAirbyteCatalog;
-import io.airbyte.protocol.models.v0.ConfiguredAirbyteStream;
-import io.airbyte.protocol.models.v0.StreamDescriptor;
-import io.airbyte.protocol.models.v0.SyncMode;
+import io.airbyte.protocol.models.v0.*;
 import io.debezium.connector.sqlserver.Lsn;
 import java.sql.JDBCType;
 import java.time.Duration;
@@ -81,33 +68,83 @@ public class MssqlInitialReadUtil {
 
   public record OrderedColumnInfo(String ocFieldName, JDBCType fieldType, String ocMaxValue) {}
 
-  public static List<AutoCloseableIterator<AirbyteMessage>> getCdcReadIterators(final JdbcDatabase database,
-                                                                                final ConfiguredAirbyteCatalog catalog,
-                                                                                final Map<String, TableInfo<CommonField<JDBCType>>> tableNameToTable,
-                                                                                final StateManager stateManager,
-                                                                                final Instant emittedAt,
-                                                                                final String quoteString) {
+  public static Optional<MssqlInitialLoadHandler> getMssqlFullRefreshInitialLoadHandler(final JdbcDatabase database,
+                                                                                        final ConfiguredAirbyteCatalog catalog,
+                                                                                        final MssqlInitialLoadStateManager initialLoadStateManager,
+                                                                                        final StateManager stateManager,
+                                                                                        final ConfiguredAirbyteStream fullRefreshStream,
+                                                                                        final Instant emittedAt,
+                                                                                        final String quoteString) {
+    final boolean savedOffsetStillPresentOnServer = isSavedOffsetStillPresentOnServer(database, catalog, stateManager);
+    final InitialLoadStreams initialLoadStreams =
+        cdcStreamsForInitialOrderedColumnLoad(stateManager.getCdcStateManager(), catalog, savedOffsetStillPresentOnServer);
+
+    // State manager will need to know all streams in order to produce a state message
+    // But for initial load handler we only want to produce iterator on the single full refresh stream.
+    if (!initialLoadStreams.streamsForInitialLoad().isEmpty()) {
+      // Filter on initialLoadStream
+      var pair = new AirbyteStreamNameNamespacePair(fullRefreshStream.getStream().getName(), fullRefreshStream.getStream().getNamespace());
+      var ocStatus = initialLoadStreams.pairToInitialLoadStatus.get(pair);
+      Map<AirbyteStreamNameNamespacePair, OrderedColumnLoadStatus> fullRefreshOcStatus;
+      if (ocStatus == null) {
+        fullRefreshOcStatus = Map.of();
+      } else {
+        fullRefreshOcStatus = Map.of(pair, ocStatus);
+      }
+
+      var fullRefreshStreamInitialLoad = new InitialLoadStreams(List.of(fullRefreshStream), fullRefreshOcStatus);
+      return Optional
+          .of(getMssqlInitialLoadHandler(database, emittedAt, quoteString, fullRefreshStreamInitialLoad, initialLoadStateManager, Optional.empty()));
+    }
+    return Optional.empty();
+  }
+
+  private static MssqlInitialLoadHandler getMssqlInitialLoadHandler(final JdbcDatabase database,
+                                                                    final Instant emittedAt,
+                                                                    final String quoteString,
+                                                                    final InitialLoadStreams initialLoadStreams,
+                                                                    final MssqlInitialLoadStateManager initialLoadStateManager,
+                                                                    final Optional<CdcMetadataInjector> metadataInjector) {
     final JsonNode sourceConfig = database.getSourceConfig();
-    final Duration firstRecordWaitTime = RecordWaitTimeUtil.getFirstRecordWaitTime(sourceConfig);
-    final Duration subsequentRecordWaitTime = RecordWaitTimeUtil.getSubsequentRecordWaitTime(sourceConfig);
-    LOGGER.info("First record waiting time: {} seconds", firstRecordWaitTime.getSeconds());
-    final int queueSize = getQueueSize(sourceConfig);
-    LOGGER.info("Queue size: {}", queueSize);
-    // Determine the streams that need to be loaded via primary key sync.
-    final List<AutoCloseableIterator<AirbyteMessage>> initialLoadIterator = new ArrayList<>();
-    // Construct the initial state for Mssql. If there is already existing state, we use that instead
-    // since that is associated with the debezium state associated with the initial sync.
+
+    final MssqlSourceOperations sourceOperations = new MssqlSourceOperations(metadataInjector);
+
+    return new MssqlInitialLoadHandler(sourceConfig, database,
+        sourceOperations, quoteString, initialLoadStateManager,
+        Optional.empty(),
+        getTableSizeInfoForStreams(database, initialLoadStreams.streamsForInitialLoad(), quoteString));
+  }
+
+  private static CdcState getCdcState(final JdbcDatabase database,
+                                      final ConfiguredAirbyteCatalog catalog,
+                                      final StateManager stateManager,
+                                      final boolean savedOffsetStillPresentOnServer) {
+    if (!savedOffsetStillPresentOnServer || (stateManager.getCdcStateManager().getCdcState() == null
+        || stateManager.getCdcStateManager().getCdcState().getState() == null)) {
+      // Construct the initial state for Mssql. If there is already existing state, we use that instead
+      // since that is associated with the debezium state associated with the initial sync.
+      final JsonNode initialDebeziumState = MssqlDebeziumStateUtil.constructInitialDebeziumState(
+          getDebeziumProperties(database, catalog, false), catalog, database);
+      return new CdcState().withState(initialDebeziumState);
+    } else {
+      return stateManager.getCdcStateManager().getCdcState();
+    }
+  }
+
+  public static boolean isSavedOffsetStillPresentOnServer(final JdbcDatabase database,
+                                                          final ConfiguredAirbyteCatalog catalog,
+                                                          final StateManager stateManager) {
     final MssqlDebeziumStateUtil mssqlDebeziumStateUtil = new MssqlDebeziumStateUtil();
-    final JsonNode initialDebeziumState = mssqlDebeziumStateUtil.constructInitialDebeziumState(
-        getDebeziumProperties(database, catalog, false), catalog, database);
+    final JsonNode sourceConfig = database.getSourceConfig();
 
     final JsonNode state =
         (stateManager.getCdcStateManager().getCdcState() == null || stateManager.getCdcStateManager().getCdcState().getState() == null)
-            ? initialDebeziumState
+            ? MssqlDebeziumStateUtil.constructInitialDebeziumState(getDebeziumProperties(database, catalog, false), catalog, database)
             : Jsons.clone(stateManager.getCdcStateManager().getCdcState().getState());
 
     final Optional<MssqlDebeziumStateAttributes> savedOffset = mssqlDebeziumStateUtil.savedOffset(
         getDebeziumProperties(database, catalog, true), catalog, state.get(MSSQL_CDC_OFFSET), sourceConfig);
+
     final boolean savedOffsetStillPresentOnServer =
         savedOffset.isPresent() && mssqlDebeziumStateUtil.savedOffsetStillPresentOnServer(database, savedOffset.get());
 
@@ -120,38 +157,55 @@ public class MssqlInitialReadUtil {
       }
       LOGGER.warn("Saved offset no longer present on the server, Airbyte is going to trigger a sync from scratch");
     }
+    return savedOffsetStillPresentOnServer;
+  }
 
+  public static MssqlInitialLoadGlobalStateManager getMssqlInitialLoadGlobalStateManager(final JdbcDatabase database,
+                                                                                         final ConfiguredAirbyteCatalog catalog,
+                                                                                         final StateManager stateManager,
+                                                                                         final Map<String, TableInfo<CommonField<JDBCType>>> tableNameToTable,
+                                                                                         final String quoteString) {
+    final boolean savedOffsetStillPresentOnServer = isSavedOffsetStillPresentOnServer(database, catalog, stateManager);
     final InitialLoadStreams initialLoadStreams =
-        cdcStreamsForInitialOrderedCoumnLoad(stateManager.getCdcStateManager(), catalog, savedOffsetStillPresentOnServer);
-    final CdcState stateToBeUsed = (!savedOffsetStillPresentOnServer || (stateManager.getCdcStateManager().getCdcState() == null
-        || stateManager.getCdcStateManager().getCdcState().getState() == null))
-            ? new CdcState().withState(initialDebeziumState)
-            : stateManager.getCdcStateManager().getCdcState();
+        cdcStreamsForInitialOrderedColumnLoad(stateManager.getCdcStateManager(), catalog, savedOffsetStillPresentOnServer);
+    final CdcState initialStateToBeUsed = getCdcState(database, catalog, stateManager, savedOffsetStillPresentOnServer);
 
+    return new MssqlInitialLoadGlobalStateManager(initialLoadStreams,
+        initPairToOrderedColumnInfoMap(database, initialLoadStreams, tableNameToTable, quoteString),
+        stateManager, catalog, initialStateToBeUsed);
+  }
+
+  public static List<AutoCloseableIterator<AirbyteMessage>> getCdcReadIterators(final JdbcDatabase database,
+                                                                                final ConfiguredAirbyteCatalog catalog,
+                                                                                final Map<String, TableInfo<CommonField<JDBCType>>> tableNameToTable,
+                                                                                final StateManager stateManager,
+                                                                                final MssqlInitialLoadStateManager initialLoadStateManager,
+                                                                                final Instant emittedAt,
+                                                                                final String quoteString) {
+    final JsonNode sourceConfig = database.getSourceConfig();
+    final Duration firstRecordWaitTime = RecordWaitTimeUtil.getFirstRecordWaitTime(sourceConfig);
+    final Duration subsequentRecordWaitTime = RecordWaitTimeUtil.getSubsequentRecordWaitTime(sourceConfig);
+    LOGGER.info("First record waiting time: {} seconds", firstRecordWaitTime.getSeconds());
+    final int queueSize = getQueueSize(sourceConfig);
+    LOGGER.info("Queue size: {}", queueSize);
+    // Determine the streams that need to be loaded via primary key sync.
+    final List<AutoCloseableIterator<AirbyteMessage>> initialLoadIterator = new ArrayList<>();
+    final boolean savedOffsetStillPresentOnServer = isSavedOffsetStillPresentOnServer(database, catalog, stateManager);
+    final InitialLoadStreams initialLoadStreams =
+        cdcStreamsForInitialOrderedColumnLoad(stateManager.getCdcStateManager(), catalog, savedOffsetStillPresentOnServer);
     final MssqlCdcConnectorMetadataInjector metadataInjector = MssqlCdcConnectorMetadataInjector.getInstance(emittedAt);
+    final CdcState stateToBeUsed = getCdcState(database, catalog, stateManager, savedOffsetStillPresentOnServer);
+
     // If there are streams to sync via ordered column load, build the relevant iterators.
     if (!initialLoadStreams.streamsForInitialLoad().isEmpty()) {
-      LOGGER.info("Streams to be synced via ordered column : {}", initialLoadStreams.streamsForInitialLoad().size());
-      LOGGER.info("Streams: {}", prettyPrintConfiguredAirbyteStreamList(initialLoadStreams.streamsForInitialLoad()));
-      final MssqlInitialLoadStateManager initialLoadStateManager =
-          new MssqlInitialLoadGlobalStateManager(initialLoadStreams,
-              initPairToOrderedColumnInfoMap(database, initialLoadStreams, tableNameToTable, quoteString),
-              stateToBeUsed, catalog, namespacePair -> Jsons.emptyObject());
-
       final MssqlDebeziumStateAttributes stateAttributes = MssqlDebeziumStateUtil.getStateAttributesFromDB(database);
-      final MssqlSourceOperations sourceOperations =
-          new MssqlSourceOperations(Optional.of(new CdcMetadataInjector(emittedAt.toString(), stateAttributes, metadataInjector)));
-
-      final MssqlInitialLoadHandler initialLoadHandler = new MssqlInitialLoadHandler(sourceConfig, database,
-          sourceOperations, quoteString, initialLoadStateManager,
-          getTableSizeInfoForStreams(database, initialLoadStreams.streamsForInitialLoad(), quoteString));
-
+      final MssqlInitialLoadHandler initialLoadHandler =
+          getMssqlInitialLoadHandler(database, emittedAt, quoteString, initialLoadStreams, initialLoadStateManager,
+              Optional.of(new CdcMetadataInjector(emittedAt.toString(), stateAttributes, metadataInjector)));
       initialLoadIterator.addAll(initialLoadHandler.getIncrementalIterators(
           new ConfiguredAirbyteCatalog().withStreams(initialLoadStreams.streamsForInitialLoad()),
           tableNameToTable,
           emittedAt));
-    } else {
-      LOGGER.info("No streams will be synced via ordered column");
     }
 
     // Build the incremental CDC iterators.
@@ -182,14 +236,14 @@ public class MssqlInitialReadUtil {
             AirbyteTraceMessageUtility::emitStreamStatusTrace));
   }
 
-  public static InitialLoadStreams cdcStreamsForInitialOrderedCoumnLoad(final CdcStateManager stateManager,
-                                                                        final ConfiguredAirbyteCatalog fullCatalog,
-                                                                        final boolean savedOffsetStillPresentOnServer) {
+  public static InitialLoadStreams cdcStreamsForInitialOrderedColumnLoad(final CdcStateManager stateManager,
+                                                                         final ConfiguredAirbyteCatalog fullCatalog,
+                                                                         final boolean savedOffsetStillPresentOnServer) {
     if (!savedOffsetStillPresentOnServer) {
+      // Add a filter here to identify resumable full refresh streams.
       return new InitialLoadStreams(
           fullCatalog.getStreams()
               .stream()
-              .filter(c -> c.getSyncMode() == SyncMode.INCREMENTAL)
               .collect(Collectors.toList()),
           new HashMap<>());
     }
@@ -200,7 +254,9 @@ public class MssqlInitialReadUtil {
     // key load in progress.
     final Map<AirbyteStreamNameNamespacePair, OrderedColumnLoadStatus> pairToInitialLoadStatus = new HashMap<>();
     if (airbyteStateMessage != null && airbyteStateMessage.getGlobal() != null && airbyteStateMessage.getGlobal().getStreamStates() != null) {
+      LOGGER.info("Trying to extract streams need initial oc sync. State message: {}", airbyteStateMessage);
       airbyteStateMessage.getGlobal().getStreamStates().forEach(stateMessage -> {
+        LOGGER.info("State message in this stream: {}", stateMessage);
         final JsonNode streamState = stateMessage.getStreamState();
         final StreamDescriptor streamDescriptor = stateMessage.getStreamDescriptor();
         if (streamState == null || streamDescriptor == null) {
@@ -230,27 +286,40 @@ public class MssqlInitialReadUtil {
     return new InitialLoadStreams(streamForOcSync, pairToInitialLoadStatus);
   }
 
-  public static Map<io.airbyte.protocol.models.AirbyteStreamNameNamespacePair, OrderedColumnInfo> initPairToOrderedColumnInfoMap(
-                                                                                                                                 final JdbcDatabase database,
-                                                                                                                                 final InitialLoadStreams initialLoadStreams,
-                                                                                                                                 final Map<String, TableInfo<CommonField<JDBCType>>> tableNameToTable,
-                                                                                                                                 final String quoteString) {
-    final Map<io.airbyte.protocol.models.AirbyteStreamNameNamespacePair, OrderedColumnInfo> pairToOcInfoMap = new HashMap<>();
+  public static Map<AirbyteStreamNameNamespacePair, OrderedColumnInfo> initPairToOrderedColumnInfoMap(
+                                                                                                      final JdbcDatabase database,
+                                                                                                      final InitialLoadStreams initialLoadStreams,
+                                                                                                      final Map<String, TableInfo<CommonField<JDBCType>>> tableNameToTable,
+                                                                                                      final String quoteString) {
+    final Map<AirbyteStreamNameNamespacePair, OrderedColumnInfo> pairToOcInfoMap = new HashMap<>();
     // For every stream that is in initial ordered column sync, we want to maintain information about
     // the current ordered column info associated with the stream
     initialLoadStreams.streamsForInitialLoad.forEach(stream -> {
-      final io.airbyte.protocol.models.AirbyteStreamNameNamespacePair pair =
-          new io.airbyte.protocol.models.AirbyteStreamNameNamespacePair(stream.getStream().getName(), stream.getStream().getNamespace());
-      final OrderedColumnInfo ocInfo = getOrderedColumnInfo(database, stream, tableNameToTable, quoteString);
-      pairToOcInfoMap.put(pair, ocInfo);
+      final AirbyteStreamNameNamespacePair pair =
+          new AirbyteStreamNameNamespacePair(stream.getStream().getName(), stream.getStream().getNamespace());
+      final Optional<OrderedColumnInfo> ocInfo = getOrderedColumnInfo(database, stream, tableNameToTable, quoteString);
+      if (ocInfo.isPresent()) {
+        pairToOcInfoMap.put(pair, ocInfo.get());
+      }
     });
     return pairToOcInfoMap;
   }
 
-  static OrderedColumnInfo getOrderedColumnInfo(final JdbcDatabase database,
-                                                final ConfiguredAirbyteStream stream,
-                                                final Map<String, TableInfo<CommonField<JDBCType>>> tableNameToTable,
-                                                final String quoteString) {
+  static Optional<OrderedColumnInfo> getOrderedColumnInfo(final JdbcDatabase database,
+                                                          final ConfiguredAirbyteStream stream,
+                                                          final Map<String, TableInfo<CommonField<JDBCType>>> tableNameToTable,
+                                                          final String quoteString) {
+    final String fullyQualifiedTableName =
+        DbSourceDiscoverUtil.getFullyQualifiedTableName(stream.getStream().getNamespace(), stream.getStream().getName());
+    final TableInfo<CommonField<JDBCType>> table = tableNameToTable
+        .get(fullyQualifiedTableName);
+    return getOrderedColumnInfo(database, stream, table, quoteString);
+  }
+
+  static Optional<OrderedColumnInfo> getOrderedColumnInfo(final JdbcDatabase database,
+                                                          final ConfiguredAirbyteStream stream,
+                                                          final TableInfo<CommonField<JDBCType>> table,
+                                                          final String quoteString) {
     // For cursor-based syncs, we cannot always assume a ordered column field exists. We need to handle
     // the case where it does not exist when we support cursor-based syncs.
     // if (stream.getStream().getSourceDefinedPrimaryKey().size() > 1) {
@@ -258,26 +327,31 @@ public class MssqlInitialReadUtil {
     // stream.getStream().getNamespace(), stream.getStream().getName());
     // } // TODO: validate the seleted column rather than primary key
     final String clusterdIndexField = discoverClusteredIndexForStream(database, stream.getStream());
-    final String ocFieldName = clusterdIndexField != null ? clusterdIndexField : stream.getStream().getSourceDefinedPrimaryKey().get(0).get(0);
+    final String ocFieldName;
+    if (clusterdIndexField != null) {
+      ocFieldName = clusterdIndexField;
+    } else {
+      if (stream.getStream().getSourceDefinedPrimaryKey().isEmpty()) {
+        return Optional.empty();
+      }
+      ocFieldName = stream.getStream().getSourceDefinedPrimaryKey().getFirst().getFirst();
+    }
+
     LOGGER.info("selected ordered column field name: " + ocFieldName);
-    final String fullyQualifiedTableName =
-        DbSourceDiscoverUtil.getFullyQualifiedTableName(stream.getStream().getNamespace(), stream.getStream().getName());
-    final TableInfo<CommonField<JDBCType>> table = tableNameToTable
-        .get(fullyQualifiedTableName);
     final JDBCType ocFieldType = table.getFields().stream()
         .filter(field -> field.getName().equals(ocFieldName))
         .findFirst().get().getType();
 
     final String ocMaxValue = MssqlQueryUtils.getMaxOcValueForStream(database, stream, ocFieldName, quoteString);
-    return new OrderedColumnInfo(ocFieldName, ocFieldType, ocMaxValue);
+    return Optional.of(new OrderedColumnInfo(ocFieldName, ocFieldType, ocMaxValue));
   }
 
   public static List<ConfiguredAirbyteStream> identifyStreamsToSnapshot(final ConfiguredAirbyteCatalog catalog,
                                                                         final Set<AirbyteStreamNameNamespacePair> alreadySyncedStreams) {
     final Set<AirbyteStreamNameNamespacePair> allStreams = AirbyteStreamNameNamespacePair.fromConfiguredCatalog(catalog);
     final Set<AirbyteStreamNameNamespacePair> newlyAddedStreams = new HashSet<>(Sets.difference(allStreams, alreadySyncedStreams));
+    // Add a filter here to identify resumable full refresh streams.
     return catalog.getStreams().stream()
-        .filter(c -> c.getSyncMode() == SyncMode.INCREMENTAL)
         .filter(stream -> newlyAddedStreams.contains(AirbyteStreamNameNamespacePair.fromAirbyteStream(stream.getStream())))
         .map(Jsons::clone)
         .collect(Collectors.toList());
@@ -293,7 +367,7 @@ public class MssqlInitialReadUtil {
     // Build a map of stream <-> initial load status for streams that currently have an initial primary
     // key load in progress.
     final Map<AirbyteStreamNameNamespacePair, OrderedColumnLoadStatus> pairToInitialLoadStatus = new HashMap<>();
-
+    LOGGER.info("raw state message: " + rawStateMessages);
     if (rawStateMessages != null) {
       rawStateMessages.forEach(stateMessage -> {
         final AirbyteStreamState stream = stateMessage.getStream();
@@ -319,16 +393,18 @@ public class MssqlInitialReadUtil {
         alreadySeenStreamPairs.add(new AirbyteStreamNameNamespacePair(streamDescriptor.getName(), streamDescriptor.getNamespace()));
       });
     }
-    final List<ConfiguredAirbyteStream> streamsForPkSync = new ArrayList<>();
+    final List<ConfiguredAirbyteStream> streamsForOcSync = new ArrayList<>();
+    LOGGER.info("alreadySeenStreamPairs: {}", alreadySeenStreamPairs);
     fullCatalog.getStreams().stream()
         .filter(stream -> streamsStillInOrderedColumnSync.contains(AirbyteStreamNameNamespacePair.fromAirbyteStream(stream.getStream())))
         .map(Jsons::clone)
-        .forEach(streamsForPkSync::add);
+        .forEach(streamsForOcSync::add);
 
     final List<ConfiguredAirbyteStream> newlyAddedStreams = identifyStreamsToSnapshot(fullCatalog,
         Collections.unmodifiableSet(alreadySeenStreamPairs));
-    streamsForPkSync.addAll(newlyAddedStreams);
-    return new InitialLoadStreams(streamsForPkSync.stream().filter((stream) -> !stream.getStream().getSourceDefinedPrimaryKey()
+    streamsForOcSync.addAll(newlyAddedStreams);
+    LOGGER.info("streamsForOcSync: {}", streamsForOcSync);
+    return new InitialLoadStreams(streamsForOcSync.stream().filter((stream) -> !stream.getStream().getSourceDefinedPrimaryKey()
         .isEmpty()).collect(Collectors.toList()),
         pairToInitialLoadStatus);
   }
@@ -358,6 +434,13 @@ public class MssqlInitialReadUtil {
       return size;
     }
     return MAX_QUEUE_SIZE;
+  }
+
+  public static InitialLoadStreams filterStreamInIncrementalMode(final InitialLoadStreams stream) {
+    return new InitialLoadStreams(
+        stream.streamsForInitialLoad.stream().filter(airbyteStream -> airbyteStream.getSyncMode() == SyncMode.INCREMENTAL)
+            .collect(Collectors.toList()),
+        stream.pairToInitialLoadStatus);
   }
 
 }
